# aws-connect-vanify

./: .gitignore  .tool-versions  README.md  package.json
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  mock.json  pyproject.toml  serverless.yml
backend/deploy/: __init__.py  __main__.py  connect.py  flow.json
backend/resources/: dynamodb.yml  roles.yml
backend/tests/: test_app.py  test_convert.py
backend/vanify/: __init__.py  app.py  convert.py  models.py  types.py  words.txt
frontend/: index.html  package.json  serverless.yml  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/components/: Home.vue
frontend/src/store/: actions.ts  mutations.ts  state.ts
