[tool.poetry]
name = "aws-connect-vanify"
version = "0.1.0"
description = "AWS Connect Phone Number vanity converter"
authors = ["Braden Mars <bradenmars@bradenmars.me>"]

[tool.poetry.dependencies]
python = "^3.8"
phonenumbers = "^8.12.21"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
flake8 = "^3.7"
isort = "^5.8.0"
rope = "^0.18.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-sugar = "^0.9.4"
black = "^20.8b1"
pytest-cov = "^2.11.1"
pre-commit = "^2.12.0"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | psycopg2
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
src_paths = ["src"]
line_length = 100
honor_noqa = true

[tool.coverage.run]
omit = ["tests/*"]
