[tool.poetry]
name = "aws-connect-vanify"
version = "0.1.0"
description = "AWS Connect Phone Number vanity converter"
authors = ["Braden Mars <bradenmars@bradenmars.me>"]
packages = [
    { include = "vanify" }
]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^20.3.0"
phonenumberslite = "^8.12.22"
pygtrie = "^2.4.2"
pynamodb = "^5.0.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
flake8 = "^3.7"
isort = "^5.8.0"
rope = "^0.18.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-sugar = "^0.9.4"
black = "^20.8b1"
pytest-cov = "^2.11.1"
pre-commit = "^2.12.0"
pytest-mock = "^3.5.1"
boto3 = "^1.17.61"
mypy-boto3-builder = "^4.7.0"
boto3-stubs = {version = "^1.17.61", extras = ["essential"]}
jmespath = "^0.10.0"
typer = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | psycopg2
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
src_paths = ["src"]
line_length = 100
honor_noqa = true

[tool.coverage.run]
omit = ["tests/*"]
